prepared project for deployment

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ psycopg2-binary = "*"
 python-dotenv = "*"
 fatsecret = "*"
 requests = "*"
+whitenoise = "*"
+gunicorn = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
